--- a/common/common.scss
+++ b/common/common.scss
@@ -2163,6 +2163,10 @@ $q-background: rgba(contrast($text-base), 0.5) !default;
 	padding-left: 0;
 }
 
+.spoiled {
+    -webkit-text-stroke: 0;
+}
+
 @if $rounded_borders == "true" {
 	#post_1 .contents,
 	.nav-pills > li.active > a,
