--- a/common/common.scss
+++ b/common/common.scss
@@ -932,7 +932,7 @@ section.post-menu-area {
 body {
 	position: relative;
 	background-attachment: scroll;
-	background: rgba(black, 0.1);
+	background-color: rgba(black, 0.1);
 }
 
 #background,
