--- a/common/common.scss
+++ b/common/common.scss
@@ -54,7 +54,13 @@ $i: !important;
 
 $v-font-weight: 300 !default;
 $v-font-size: 1.1em !default;
-$v-theme-background: url(#{$theme_background}) !default;
+$v-theme-background: null;
+@if ($theme_background == "") {
+    $v-theme-background: url(#{$vincent_background}) !default;
+} @else {
+    $v-theme-background: url(#{$theme_background}) !default;    
+}
+
 $v-hue: 0 !default;
 $v-saturation: -25 !default;
 $v-lightness: 0 !default;
