Revert "DEV: Dart Sass / deprecation (#4)"
This reverts commit 9cc52bab998faf5ffc6bb591d424b3523895774a.

--- a/common/common.scss
+++ b/common/common.scss
@@ -1,10 +1,8 @@
 // functions  --------------------------------------------------------------------------------
 
 // Calculate brightness value
-@use "sass:math";
-
 @function brightness($color) {
-  @return math.div(red($color) + green($color) + blue($color), 255 * 3);
+  @return (red($color) + green($color) + blue($color)) / (255 * 3);
 }
 
 // to base color
