--- a/common/common.scss
+++ b/common/common.scss
@@ -12,12 +12,20 @@
 
 // Compare colors to higher contrast
 @function contrast($base, $color1: white, $color2: black) {
-  @return if(brightness_ratio($base, $color1) > brightness_ratio($base, $color2), $color1, $color2);
+  @return if(
+    brightness_ratio($base, $color1) > brightness_ratio($base, $color2),
+    $color1,
+    $color2
+  );
 }
 
 // Compare colors to lower contrast (inverting the former contrast function)
 @function invert-contrast($base, $color1: white, $color2: black) {
-  @return if(brightness_ratio($base, $color1) > brightness_ratio($base, $color2), $color2, $color1);
+  @return if(
+    brightness_ratio($base, $color1) > brightness_ratio($base, $color2),
+    $color2,
+    $color1
+  );
 }
 
 // reverse lightness
@@ -56,9 +64,9 @@ $v-font-weight: 300 !default;
 $v-font-size: 1.1em !default;
 $v-theme-background: null;
 @if ($theme_background == "") {
-    $v-theme-background: url(#{$vincent_background}) !default;
+  $v-theme-background: url(#{$vincent-background}) !default;
 } @else {
-    $v-theme-background: url(#{$theme_background}) !default;
+  $v-theme-background: url(#{$theme_background}) !default;
 }
 
 $v-hue: 0 !default;
@@ -69,11 +77,10 @@ $V-page-max-width: 95vw !default;
 // palette colors -------------------------------
 
 $theme-base: hsl(
-    hue($tertiary) + $v-hue,
-    saturation($tertiary) + $v-saturation,
-    lightness($tertiary) + $v-lightness
-  )
-  !default;
+  hue($tertiary) + $v-hue,
+  saturation($tertiary) + $v-saturation,
+  lightness($tertiary) + $v-lightness
+) !default;
 $theme-trim: $quaternary !default;
 
 $main-background: rgba($header_background, 0.9) !default;
@@ -95,6 +102,12 @@ $highlight-speed: #{$highlight_duration}s !default;
 $button-text-case: #{$button_text_case} !default;
 
 // fonts --------------------------------------------------------------------------------------
+
+@font-face {
+  font-family: "Assistant";
+  src: url($assistant-light);
+  font-weight: bold;
+}
 
 html {
   font-family: "Assistant", sans-serif;
@@ -1747,7 +1760,7 @@ section.post-actions:empty {
 }
 
 .cooked {
-  >  {
+  > {
     .slick-initialized:first-child,
     .lazyYT-container:first-child {
       margin-top: -15px;
